# SCIE3212

./: .gitignore  README.md  main.py  profile_output.prof  requirements.txt  run_batch_simulations.py  test.py
analysis/: dynamics_analysis.ipynb  mass_flux_analysis.py  nutrient_analysis.py  pressure_analysis.py  scie3121_analysis.py  simulation_analysis.py  solid_velocity_analysis.py  tumor_analysis.py
app/: app.py
assessment/: logbook.md
experiments/parameter_sweep/: parameter_sweep.py  parameter_sweep_analysis.py
files/: logbook.md
files/mathematical model/: PDE.md  SCIE3121_model.md  adhesion_energy.md  mass_flux.md  model_outline.md  solid_velocity.md  source_terms.md  summary.md
src/: main.py  simulation.py  utils.py  visualization.py
src/models/: SCIE3121_model.py  cell_dynamics.py  cell_production.py  diffusion.py  diffusion_dynamics.py  drug_schedule.py  initial_conditions.py  tumor_growth.py
src/models/cpp/: CMakeLists.txt  bindings.cpp  simulation.cpp  simulation.hpp
src/notebooks/: SCIE3121_model.ipynb  exploration.ipynb  model_exploration.ipynb
src/optimization/: __init__.py  data_comparison.py  parameter_fitting.py
src/utils/: run_cpp_sim.py  run_py_sim.py  test_cpp_implementation.py  utils.py
src/visualization/: animate_tumor.py  plot_tumor.py
